kubernetes/monitoring-system/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor
  name: monitor
  namespace: "monitoring-system"
spec:
  ports:
  - port: 9090
    protocol: TCP
    name: prometheus
    targetPort: 9090
  - port: 3000
    protocol: TCP
    name: grafana
    targetPort: 3000
  selector:
    app: monitor
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: monitor
  name: monitor
  namespace: "monitoring-system"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monitor
    spec:
      serviceAccountName: monitor
      containers:
      - image: prom/blackbox-exporter:latest
        imagePullPolicy: Always
        name: blackbox-exporter
        resources: {}
      - image: prom/alertmanager:latest
        imagePullPolicy: Always
        name: alertmanager
        ports:
        - containerPort: 9093
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /etc/alertmanager/alertmanager.yml
          subPath: alertmanager.yml
          name: alertmanager-yml
      - image: prom/prometheus:v2.3.2
        imagePullPolicy: Always
        name: prometheus
        readinessProbe:
          httpGet:
            path: /graph
            port: 9090
          periodSeconds: 10
          initialDelaySeconds: 0
          failureThreshold: 10
          successThreshold: 1
        ports:
        - containerPort: 9090
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
          name: prometheus-yml
        - mountPath: /etc/prometheus/alert.rules.yml
          subPath: alert.rules.yml
          name: alert-rules-yml
        - mountPath: /prometheus
          name: prometheus-data
        securityContext:
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - image: grafana/grafana:5.2.0
        imagePullPolicy: Always
        name: grafana
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          periodSeconds: 10
          initialDelaySeconds: 0
          failureThreshold: 10
          successThreshold: 1
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
          name: grafana-ini
        - mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
          subPath: datasource.yaml
          name: grafana-datasource
        - mountPath: /var/lib/grafana
          name: grafana-data
        securityContext:
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: alertmanager-yml
        configMap:
          name: alertmanager-yml
      - name: prometheus-yml
        configMap:
          name: prometheus-yml
      - name: alert-rules-yml
        configMap:
          name: alert-rules-yml
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data
      - name: grafana-ini
        configMap:
          name: grafana-ini
      - name: grafana-datasource
        configMap:
          name: grafana-datasource
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
