kubernetes/monitoring-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor
  name: monitor
  namespace: "monitoring-system"
spec:
  ports:
  - port: 9090
    protocol: TCP
    name: prometheus
    targetPort: 9090
  - port: 3000
    protocol: TCP
    name: grafana
    targetPort: 3000
  selector:
    app: monitor
  type: NodePort
