kubernetes/monitoring-system/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb
  namespace: "monitoring-system"
  annotations:
      kubernetes.io/ingress.global-static-ip-name: "blog-monitoring-system"
      kubernetes.io/ingress.allow-http: "false"
      ingress.gcp.kubernetes.io/pre-shared-cert: "threetreeslight-2018-12-07"
spec:
  rules:
  - host: "grafana.threetreeslight.com"
    http:
      paths:
      - backend:
          serviceName: monitor
          servicePort: 3000
